# warehouse_robot

./: CMakeLists.txt  README.md  package.xml  performance_capture.bag  requirements.sh
config/: costmap_common_params_burger.yaml  dwa_local_planner_params_burger.yaml  global_costmap_params.yaml  local_costmap_params.yaml  params.yaml
launch/: amcl.launch  custom_description.launch  grid_navigation.launch  move_base.launch  turtlebot3_navigation.launch  turtlebot3_remote.launch  turtlebot3_warehouse_1.launch  world.launch
logging/: Logging.py  bagtolog.py  howtorunloggingsep.txt  logging_metrics_specification.txt  performance_capture.bag  readme.md
maps/: warehouse_1.pgm  warehouse_1.yaml  warehouse_2.pgm  warehouse_2.yaml
models/Shelf1/: model.config  model.sdf
models/Shelf2/: model.config  model.sdf
msg/: ActionStep.msg  RobotStatus.msg
pat/: CMakeLists.txt  output.txt  run.csp  template.csp  trigger_PAT.cpp  trigger_PAT.py
pat/MONO-PAT-v3.6.0/: PAT 3.ini  output.txt  recents.xml
rviz/: turtlebot3_navigation.rviz
scripts/: executor_agent.py  executor_agent_amcl.py  executor_agent_control_toolbox.py  executor_agent_move_base.py  executor_agent_teleport.py  grid_overlay_publisher.py  manager_agent.py  manager_combined.py  ollama_agent.py  planner_agent.py  send_goal.py  validator_agent.py
src/: validator_agent.cpp
srv/: AssignTask.srv  CheckMovement.srv  ExecutePath.srv  GetPath.srv  RequestReplan.srv  ValidatePath.srv  ValidatePathWithPat.srv
worlds/: warehouse_1.world  warehouse_1_copy.world  warehouse_2 copy.world  warehouse_2.world
(+5 files in other folders)
